--- a/MillviVideoDownloader/MillviVideoDownloader/MillviVideoDownloader.csproj
+++ b/MillviVideoDownloader/MillviVideoDownloader/MillviVideoDownloader.csproj
@@ -6,4 +6,14 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
