--- a/MillviVideoDownloader/MillviVideoDownloader/MillviVideoDownloader.csproj
+++ b/MillviVideoDownloader/MillviVideoDownloader/MillviVideoDownloader.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.11.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
